# pyconlyse

./: .gitattributes  .gitignore  5.15  5.15.11  C60_source_position_determination.ipynb  LICENCE  README.md  SuperUser.py  TODO  Untitled.ipynb  pyproject.toml  pytlyse.py  requirements.txt  widget_camera.py  widget_stpmtr_axis_simple.py
.ipynb_checkpoints/: C60_source_position_determination-checkpoint.ipynb  CO2_conc-checkpoint.ipynb  Untitled-checkpoint.ipynb
DB/: Devices.db  Devices.db-journal  Projects.db  tools.py
DeviceServers/: DS_Widget.py  __init__.py
DeviceServers/ANDOR_CCD/: DS_ANDOR_CCD.py  DS_ANDOR_CCD_Widget.py  add_ds_ANDOR_CCD.py
DeviceServers/ARCHIVE/: DS_ARCHIVE_Widget.py  DS_Archive.py  add_ds_archive.py
DeviceServers/AVANTES/: DS_AVANTES_CCD.py  add_ds_AVANTES_CCD.py  avaspec_test.py
DeviceServers/AVANTES_CCD/: DS_AVANTES_CCD.py  DS_AVANTES_CCD_Widget.py  add_ds_AVANTES_CCD.py  arduino_sync_code  avaspec_test.py  avaspec_test2.py
DeviceServers/BASLER/: DS_BASLER_Widget.py  DS_Basler_camera.py  add_ds_BASLER.py
DeviceServers/Experiment/: DS_Experiment.py  DS_Experiment_Widget.py  Projects_GUI.ui  add_ds_Experiment.py  data_classes.py  experiment.py  experiment.ui  experiment_widget.ui  experiments.db  (+1 more)
LOG/: devices.devices.Server_default_log.db
Messages_examples/: Hello_Server.txt
communication/: interfaces.py  start_tango_witchi.cmd
controllers/: ClientGUIControllers.py  Mcontroller.py  ServerGUIController.py  SettingsWidgetcontroller.py
database/: Devices.db  Projects.db  tools.py
devices/: __init__.py  datastruct_for_messaging.py  devices.py  devices_dataclass.py  interfaces.py
dosimetry/: gamma-source.py
errors/: messaging_errors.py  myexceptions.py
gui/: MyWidgets.py  Panels.py  Treatment.py
logs_pack/: logs.py
models/: ClientGUIModels.py  ServerGUIModel.py  SettingsGUImodel.py
utilities/: GPIB_send.py  ZipFiles.py  auxil.txt  configurations.py  myfunc.py  parallel.py  search_good_spectra.py  test_.py  ui_experiment.py
views/: ClientGUIViews.py  Mview.py  ServerGUIView.py
web/: run.py
(+650 files in other folders)
